--- a/index.html
+++ b/index.html
@@ -1,1 +1,107 @@
-Hello World!
+<!DOCTYPE html>
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Alvin Lee</title>
+    <link rel="stylesheet" href="./styles.css" type="text/css" />
+    <!-- color scheme (light to dark): #FFFFFF, #DDE6ED, #9DB2BF, #526D82, #27374D -->
+</head>
+
+<body>
+
+    <div class="mainbody-styles">
+
+        <table class="table">
+
+            <thead>
+                <tr>
+                    <th colspan="2">
+                        <img class="profile-image" src="./img/professional-profile.jpg" alt="A professional front-profile picture of Alvin" />
+                        <br />You can reach me via:
+                        <br />Email: <a style="text-decoration: none" href="mailto:e1327927@u.nus.edu"><u>e1327927@u.nus.edu</u></a>
+                        <br /><a href="https://www.linkedin.com/in/alvin-lee-867336192/" style="text-decoration: none"><u>LinkedIn</u></a>
+                        <br /><a href="https://github.com/zephyrdark" style="text-decoration: none"><u>Github</u></a>
+                    </th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td colspan="2">
+                        <h1>Hi, My name is Alvin Lee.</h1>
+                        <p class="mainbody-headerstyles">
+                            Introduction
+                        </p>
+                        <p>
+                            After graduating in 2018 with a Bachelor's Degree in Logistics and Supply Chain Management,
+                            I worked as a procurement professional in the healthcare and transportation industry for 4 years.
+                        </p>
+                        <p>
+                            My time there was enjoyable, as I had the opportunity to learn and experience many challenges and rewards along the way.
+                            I also met many amazing colleagues, partners, and stakeholders.
+                        </p>
+                        <p>
+                            Inspired by the many passionate people, and being always interested in technology, I decided to make a career change.
+                        </p>
+                        <p>
+                            I am now a student at NUS-ISS, studying for my Graduate Diploma in Systems Anaylsis.
+                        </p>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td colspan="2">
+                        <p class="mainbody-headerstyles">
+                            Languages
+                        </p>
+                        <p>
+                            I am familiar with the following programming languages, in no order of preference:
+                            <ul>
+                                <li>Python</li>
+                                <li>C# (C Sharp)</li>
+                                <li>HTML, CSS, JavaScript</li>
+                            </ul>
+                        </p>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <img class="display-image" src="./img/funny-profile.jpg" alt="A funny side-profile picture of Alvin looking towards the right" />
+                    </td>
+
+                    <td>
+                        <p class="mainbody-headerstyles">
+                            Food
+                        </p>
+                        <p>
+                            Here are some of my favourite food:
+                            <ol>
+                                <li>Taiwanese Braised Pork Rice</li>
+                                <li>Sushi</li>
+                                <li>Oat Milk Latte</li>
+                                <li>Bibimbap</li>
+                                <li>Chashu Ramen</li>
+                            </ol>
+                        </p>
+                    </td>
+                </tr>
+            </tbody>
+
+            <tfoot>
+                <tr>
+                    <td colspan="2">
+                        <br />
+                        Last Updated By Alvin, Feb 2024
+                    </td>
+                </tr>
+            </tfoot>
+
+        </table>
+
+    </div>
+
+</body>
+
+</html>
