--- a/index.html
+++ b/index.html
@@ -16,20 +16,25 @@
 
             <thead>
                 <tr>
-                    <th colspan="2">
-                        <img class="profile-image" src="./img/professional-profile.jpg" alt="A professional front-profile picture of Alvin" />
-                        <br />You can reach me via:
-                        <br />Email: <a style="text-decoration: none" href="mailto:e1327927@u.nus.edu"><u>e1327927@u.nus.edu</u></a>
-                        <br /><a href="https://www.linkedin.com/in/alvin-lee-867336192/" style="text-decoration: none"><u>LinkedIn</u></a>
-                        <br /><a href="https://github.com/zephyrdark" style="text-decoration: none"><u>Github</u></a>
-                    </th>
+                    <td colspan="2"></td>
                 </tr>
             </thead>
 
             <tbody>
                 <tr>
-                    <td colspan="2">
+                    <th class="header-socials" colspan="2">
+                        <img class="profile-image" src="./img/professional-profile.jpg" alt="A professional front-profile picture of Alvin" />
                         <h1>Hi, My name is Alvin Lee.</h1>
+                        You can reach me via:
+                        <br />Email: <a href="mailto:e1327927@u.nus.edu"><u>e1327927@u.nus.edu</u></a>
+                        <br /><a href="https://www.linkedin.com/in/alvin-lee-867336192/"><u>LinkedIn</u></a>
+                        <br /><a href="https://github.com/zephyrdark"><u>Github</u></a>
+                        <hr>
+                    </th>
+                </tr>
+
+                <tr>
+                    <td colspan="2">
                         <p class="mainbody-headerstyles">
                             Introduction
                         </p>
@@ -45,8 +50,9 @@
                             Inspired by the many passionate people, and being always interested in technology, I decided to make a career change.
                         </p>
                         <p>
-                            I am now a student at NUS-ISS, studying for my Graduate Diploma in Systems Anaylsis.
+                            I am now a student at NUS-ISS, studying for my Graduate Diploma in Systems Analysis.
                         </p>
+                        <hr>
                     </td>
                 </tr>
 
@@ -63,6 +69,26 @@
                                 <li>HTML, CSS, JavaScript</li>
                             </ul>
                         </p>
+                        <hr>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td colspan="2">
+                        <p class="mainbody-headerstyles">
+                            Why this page
+                        </p>
+                        <p>
+                            This web page is created for one of my assignments, which meets its following criteria:
+                            <ul>
+                                <li>the required HTML page codes &#9989</li>
+                                <li>link to another web page &#9989</li>
+                                <li>an email link &#9989</li>
+                                <li>a picture/graphic &#9989</li>
+                                <li>a list of information &#9989</li>
+                            </ul>
+                        </p>
+                        <hr>
                     </td>
                 </tr>
 
@@ -92,6 +118,7 @@
             <tfoot>
                 <tr>
                     <td colspan="2">
+                        <hr>
                         <br />
                         Last Updated By Alvin, Feb 2024
                     </td>
